Bug 282880 - Cannot save new version without from window close.
Summary: Cannot save new version without from window close.
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Versioning (other bugs)
Version First Reported In: 2.1.1
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-27 01:13 UTC by Dotan Cohen
Modified: 2022-02-01 22:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dotan Cohen 2011-09-27 01:13:40 UTC
When editing a photo and then clicking the X button to close the editor window, the user has an option to Save As A New Version. Clicking this button has no effect. A new version is not saved and the windows does not close.

I found that the way to avoid the issue is to click the Save As A New Version from the toolbar first.
Comment 1 Rinus Bakker 2011-09-27 11:19:08 UTC
Op 27-09-11 03:13, Dotan Cohen schreef:
> https://bugs.kde.org/show_bug.cgi?id=282880
>
>             Summary: Cannot save new version without from window close.
>             Product: digikam
>             Version: 2.1.1
>            Platform: Unlisted Binaries
>          OS/Version: Linux
>              Status: NEW
>            Severity: normal
>            Priority: NOR
>           Component: Versioning
>          AssignedTo: digikam-devel@kde.org
>          ReportedBy: kde-2011.08@dotancohen.com
>
>
> When editing a photo and then clicking the X button to close the editor window,
> the user has an option to Save As A New Version. Clicking this button has no
> effect. A new version is not saved and the windows does not close.
>
> I found that the way to avoid the issue is to click the Save As A New Version
> from the toolbar first.
>
Same too if clicked ¨close editor¨ -> save as new version does not 
result in anything.
Rinus
Comment 2 Marcel Wiesweg 2011-10-07 17:21:15 UTC
Git commit 959af3eb851e15bfffa6b1080d4fb8984d2a131f by Marcel Wiesweg.
Committed on 07/10/2011 at 19:19.
Pushed by mwiesweg into branch 'master'.

Honour "Save As New Version" when prompting user for save options on image editor closing

BUG: 282880

M  +2    -1    NEWS
M  +21   -6    utilities/imageeditor/editor/editorwindow.cpp

http://commits.kde.org/digikam/959af3eb851e15bfffa6b1080d4fb8984d2a131f