Honour "Save As New Version" when prompting user for save options on image editor closing

BUG: 282880